// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextLink /> Should render correctly 1`] = `
<div>
  <a
    class="sc-iBkjds JLudk"
    href="/test"
  >
    some text
  </a>
</div>
`;

exports[`<TextLink /> Should render correctly with custom className 1`] = `
<div>
  <a
    class="sc-iBkjds JLudk test-custom-classname"
    href="/test"
  >
    some text
  </a>
</div>
`;

exports[`<TextLink /> Should render with nextified href 1`] = `
<div>
  <a
    class="sc-iBkjds JLudk"
    href="/blog/test"
  >
    some text
  </a>
</div>
`;
